[gd_scene load_steps=8 format=2]

[ext_resource path="res://boss/BigBadCarrot_112x117.png" type="Texture" id=1]
[ext_resource path="res://boss/boss.gd" type="Script" id=2]
[ext_resource path="res://bullet/bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://boss/hit.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 50.4542

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 1, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_quick_volley"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -40, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -40, 0 ), Vector2( 0, 0 ) ]
}

[node name="carrot" type="KinematicBody2D" groups=[
"boss",
]]
script = ExtResource( 2 )
Bullet = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
vframes = 3
hframes = 6

[node name="Timer" type="Timer" parent="."]
wait_time = 0.07

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/shoot = SubResource( 3 )

[node name="GunTip" type="Position2D" parent="."]
position = Vector2( 54.3053, -2.52872 )

[node name="PosLeft" type="Position2D" parent="GunTip"]
position = Vector2( -1.00113, -15.3507 )

[node name="PosRight" type="Position2D" parent="GunTip"]
position = Vector2( 13.6821, 6.00678 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
<<<<<<< Updated upstream
volume_db = -27.272
=======
volume_db = -27.0
>>>>>>> Stashed changes
pitch_scale = 0.75
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
